--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,36 @@
     src: url("../fonts/Manrope-medium.otf") format("truetype");
 }
 
-
 header{
   background-image: url("../img/blueheader.png");
   height: 870px;
   background-size: cover;
   display: flex;
   justify-content: center;
+}
+
+body
+{
+    background:linear-gradient(180deg, #303030, #101010);
+    background-attachment: fixed;
+    max-height: 100vh;
+    color: #dddddd;
+}
+
+.modal-content
+{
+    background:linear-gradient(180deg, #303030, #101010);
+    color: #dddddd;
+}
+
+.colArticle
+{
+    background-color: #000000 ;
+}
+
+.btn
+{
+    background-color: #dddddd;
+    color: black;
+
 }
