--- a/assets/css/stylelight.css
+++ b/assets/css/stylelight.css
@@ -1,15 +1,10 @@
 @font-face {
     font-family: Manrope-Regular;
-    src: url("../fonts/Manrope-Regular.otf") format("truetype");
+    src: url("../fonts/Manrope-Regular.otf") format("OpenType");
 }
 @font-face {
-    font-family: Manrope-bold;
-    src: url("../fonts/Manrope-bold.otf") format("truetype");
-}
-
-@font-face {
-    font-family: Manrope-medium;
-    src: url("../fonts/Manrope-medium.otf") format("truetype");
+    font-family: Manrope;
+    src: url("../fonts/Manrope.otf") format("OpenType");
 }
 
 
@@ -20,6 +15,8 @@ body
     background-attachment: fixed;
     max-height: 100vh;
     color: black;
+    font-family: Manrope-Regular;
+    src: url("../fonts/Manrope-Regular.otf") format("OpenType");
 }
 
 .modal-content
@@ -42,7 +39,14 @@ body
 
 #titleColor{
     color: #ff9100;
+    font-family: Manrope;
+src: url("../fonts/Manrope.otf") format("OpenType");
 }
+
+h5{
+    font-family: Manrope;
+    src: url("../fonts/Manrope.otf") format("OpenType");
+    }
 
 a, a:hover{
     text-decoration: none;
@@ -54,3 +58,7 @@ footer{
     color: #fffd;
 }
 
+#boldfont{
+    font-family: Manrope;
+    src: url("../fonts/Manrope.otf") format("OpenType");
+}
